igt@i915_selftest@live_active - live_active_wait failed with error -EINVAL
https://intel-gfx-ci.01.org/tree/drm-tip/IGT_5347/fi-icl-u2/igt@i915_selftest@live_active.html
<6> [519.598354] i915: Running i915_active_live_selftests/live_active_wait
<3> [519.604197] i915_active not retired after waiting!
<3> [519.604373] *ERROR* live_active_wait active __live_active+0x0/0x50 [i915]:__live_retire+0x0/0x10 [i915]
<3> [519.604377] *ERROR* live_active_wait count: 0
<3> [519.604379] *ERROR* live_active_wait preallocated barriers? no
Edited by Chris Wilson